<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/setting_tv_permission"
            style="@style/setting_item"
            android:drawableEnd="@drawable/ic_arrow"
            android:text="@string/permission_setting" />

        <include layout="@layout/include_divider_line" />

        <TextView
            style="@style/setting_item"
            android:id="@+id/setting_tv_modify_password"
            android:text="@string/setting_modify_password"
            android:drawableEnd="@drawable/setting_icon_password"/>

        <include layout="@layout/include_divider_line"/>

        <TextView
            android:id="@+id/setting_tv_share"
            style="@style/setting_item"
            android:drawableEnd="@drawable/ic_share"
            android:text="@string/share" />

        <include layout="@layout/include_divider_line" />

        <TextView
            style="@style/setting_item"
            android:id="@+id/setting_tv_feedback"
            android:text="@string/feedback"
            android:drawableEnd="@drawable/setting_icon_feedback"/>

        <include layout="@layout/include_divider_line"/>

        <TextView
            style="@style/setting_item"
            android:id="@+id/setting_tv_about"
            android:text="@string/about"
            android:drawableEnd="@drawable/icon_setting_about"/>

        <include layout="@layout/include_divider_line"/>

        <TextView
            android:id="@+id/setting_tv_support"
            style="@style/setting_item"
            android:drawableEnd="@drawable/ic_support"
            android:text="@string/support"
            android:visibility="visible"/>

        <include layout="@layout/include_divider_line"
            android:visibility="visible"/>

        <com.allever.lib.ad.chain.BannerLayout
            android:id="@+id/bannerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>